# Presto

./: .gitignore  ASG.cs  AST.cs  ASTBuilder.fs  AsgNodeVisitor.cs  AstNodeVisitor.cs  BootstrappedCompiler.pst  CCodeGenerator.cs  CHANGELOG.md  CSharpCompiler.fs  CodeGenerator.fs  Compile.pst  CompilerCore.fs  Core.fs  Extensions.cs  LICENSE  Lexer.cs  Lexer.fs  Main.lean  Parser.cs  Parser.fs  Presto.csproj  Presto.fsproj  Presto.md  Presto.sln  PrestoCodeGenerator.cs  Program.cs  Program.fs  README.md  Result.cs  SemanticAnalysis.cs  Test.g.cs  Test.pst  TypeChecker.fs  Unit.cs  lakefile.lean  presto.cabal
Examples/: 1.HelloWorld.pst  2.BasicArithmetic.pst  3.UserInput.pst  4.SimpleCalculator.pst  5.TemperatureConverter.pst  ListFirst.pst  ListHead.pst  OneBillionRowChallenge.pst  OpenYouTube.pst  PartialFunctionApplication.pst  Test.pst
Presto.AI.Agents/: Agent.cs  BookGenerator.cs  OpenAI.cs  Presto.AI.Agents.csproj  Program.cs
Presto.AI.Assistant/: ADO.cs  Audio.cs  ColesCommands.cs  Command.cs  Commands.cs  Desktop.cs  DesktopApps.cs  FileSystem.cs  Presto.AI.Assistant.csproj  Program.cs  RecNet.cs  WebBrowser.cs
Presto.AI.Assistant.GUI/: App.axaml  App.axaml.cs  Command.cs  CommandControl.axaml  CommandControl.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Presto.AI.Assistant.GUI.csproj  Program.cs  app.manifest
Presto.CLI/: CSharpCodeRunner.cs  Presto.CLI.csproj  Program.cs
Presto.Compiler/: AST.cs  ASTBuilder.cs  CodeGenerator.cs  DBC.cs  Extensions.cs  Grammar.cs  Lexer.cs  MaybeMonad.cs  ParseTree.cs  Parser.cs  Presto.Compiler.csproj  Presto.g4  (+2 more)
(+47 files in other folders)
